--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "ujwal",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
